# OPOL

./: CMakeLists.txt  README.md
Lib/include/: OPOL.h  fastatan2.h  plylib.h
Lib/lib/: OPOL_Lib.lib
OPOL/: opol_test.cpp  opol_test.h
